[gd_scene load_steps=4 format=3 uid="uid://bs5dsbl13w0yf"]

[ext_resource type="Script" path="res://Scenes/campaign/scripts/TutorialSelection.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://d1you1rrwuu48" path="res://Scenes/sci_fi_theme.tres" id="2_theme"]
[ext_resource type="Script" path="res://Scenes/Utils/TutorialManager.gd" id="3_tutorial_manager"]

[node name="TutorialSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select Tutorial Option"
horizontal_alignment = 1

[node name="StoryTrackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Story Track"

[node name="CompendiumButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Compendium"

[node name="SkipButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Skip Tutorial"

[node name="TutorialManager" type="Node" parent="."]
script = ExtResource("3_tutorial_manager")

[connection signal="pressed" from="Panel/VBoxContainer/StoryTrackButton" to="." method="_on_story_track_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/CompendiumButton" to="." method="_on_compendium_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SkipButton" to="." method="_on_skip_pressed"]
